--- a/EHR/src/main/resources/application.properties
+++ b/EHR/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.application.name=EHR
 
+
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port= 27017
+spring.data.mongodb.database=electronicHealthRecords
+spring.data.mongodb.repositories.enabled=true
